--- a/helm/values.yaml
+++ b/helm/values.yaml
@@ -78,11 +78,8 @@ serviceAccount:
     {}
     # eks.amazonaws.com/role-arn: arn:aws:iam::AWS_ACCOUNT_ID:role/IAM_ROLE_NAME
 
-awsRegion: ap-northeast-1
-awsAccountId: 111815285043
-clusterVpcId: vpc-0ed040bc35eac4ae6
 clusterName: eks-auto-mode-sample
-defaultServiceNetwork: test-gateway
+defaultServiceNetwork: lattice-gateway
 latticeEndpoint:
 webhookEnabled: true
 disableTaggingServiceApi: false
