--- a/helm/values.yaml
+++ b/helm/values.yaml
@@ -5,6 +5,8 @@
 image:
   repository: 111815285043.dkr.ecr.ap-northeast-1.amazonaws.com/aws-gateway-controller
   tag: latest
+  # repository: public.ecr.aws/aws-application-networking-k8s/aws-gateway-controller
+  # tag: v1.1.0
   pullPolicy: Always
   pullSecrets: []
 
@@ -77,7 +79,9 @@ serviceAccount:
   annotations:
     {}
     # eks.amazonaws.com/role-arn: arn:aws:iam::AWS_ACCOUNT_ID:role/IAM_ROLE_NAME
-
+awsRegion: ap-northeast-1
+awsAccountId: 111815285043
+clusterVpcId: vpc-04a3485e6f724b770
 clusterName: eks-auto-mode-sample
 defaultServiceNetwork: lattice-gateway
 latticeEndpoint:
