--- a/test.yml
+++ b/test.yml
@@ -22,18 +22,31 @@ spec:
 apiVersion: gateway.networking.k8s.io/v1
 kind: HTTPRoute
 metadata:
-  name: test-service
+  name: test-service2
   namespace: default
 spec:
   parentRefs:
      - name: lattice-gateway
-       namespace: default
        sectionName: http
+     - name: other-gateway
+       namespace: default
   rules:
-      - backendRefs:
-        - name: test-service
-          kind: Service
-          port: 80
+     - matches:
+       - path:
+           type: PathPrefix
+           value: /test
+       backendRefs:
+       - name: test-service
+         kind: Service
+         port: 80
+         filters:
+          - type: URLRewrite
+            urlRewrite:
+              path: 
+                type: ReplacePrefixMatch
+                replacePrefixMatch: /
+
+          
 ---
 apiVersion: v1
 kind: Service
